@@ -7,7 +7,7 @@ format output from clush/pdsh-like output and more
 --------------------------------------------------
 
 :Author: Stephane Thiell, CEA DAM  <stephane.thiell@cea.fr>
-:Date:   2011-05-29
+:Date:   2011-06-07
 :Copyright: CeCILL-C V1
 :Version: 1.5
 :Manual section: 1
@@ -53,6 +53,7 @@ OPTIONS
                do not display group source prefix (always `@groupname`)
 -S SEPARATOR, --separator=SEPARATOR
                node / line content separator string (default: `:`)
+-F, --fast     faster but memory hungry mode (preload all messages per node)
 -T, --tree     message tree trace mode; switch to enable ``ClusterShell.MsgTree`` trace mode, all keys/nodes being kept for each message element of the tree, thus allowing special output gathering
 --color=WHENCOLOR   whether to use ANSI colors to surround node or nodeset prefix/header with escape sequences to display them in color on the terminal. *WHENCOLOR* is ``never``, ``always`` or ``auto`` (which use color if standard output refers to a terminal). Color is set to [34m (blue foreground text) and cannot be modified.
 
